Fixed map wrapping Added footer links

--- a/src/components/start-screen/area-list/_areaList.css
+++ b/src/components/start-screen/area-list/_areaList.css
@@ -2,6 +2,10 @@
   position: relative;
 }
 
+.gg-area-buttons {
+  z-index: 1;
+}
+
 .gg-area-icon {
   position: absolute;
   right: 0;
